Fix header z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -46,7 +46,7 @@ html, body, .home {
 	padding-top: 10px;
 	font-family: sans-serif;
 	margin-bottom: 10px;
-	z-index: 2;
+	z-index: 101;
 
 	.header ul li {
 		display: inline-block;
